cmake_minimum_required(VERSION 3.22.1)

project(nautilus-yarpgen)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CATCH_ENABLE_REPRODUCIBLE_BUILD OFF CACHE INTERNAL "Turn off tests")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -fpermissive -fPIC -fno-omit-frame-pointer")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/nautilus)

add_executable(demo foo.cpp)

target_link_libraries(demo PRIVATE nautilus)


add_executable(simple simple.cpp)
target_link_libraries(simple PRIVATE nautilus)

add_executable(test_6 test_6/naut.cpp)
target_link_libraries(test_6 PRIVATE nautilus)
add_executable(test_7 test_7/naut.cpp)
target_link_libraries(test_7 PRIVATE nautilus)
add_executable(test_10 test_10/naut.cpp)
target_link_libraries(test_10 PRIVATE nautilus)
add_executable(test_12 test_12/naut.cpp)
target_link_libraries(test_12 PRIVATE nautilus)
add_executable(test_16 test_16/naut.cpp)
target_link_libraries(test_16 PRIVATE nautilus)
add_executable(test_17 test_17/naut.cpp)
target_link_libraries(test_17 PRIVATE nautilus)
add_executable(test_18 test_18/naut.cpp)
target_link_libraries(test_18 PRIVATE nautilus)
add_executable(test_19 test_19/naut.cpp)
target_link_libraries(test_19 PRIVATE nautilus)
add_executable(test_23 test_23/naut.cpp)
target_link_libraries(test_23 PRIVATE nautilus)
add_executable(test_25 test_25/naut.cpp)
target_link_libraries(test_25 PRIVATE nautilus)
add_executable(test_27 test_27/naut.cpp)
target_link_libraries(test_27 PRIVATE nautilus)
add_executable(test_30 test_30/naut.cpp)
target_link_libraries(test_30 PRIVATE nautilus)
add_executable(test_33 test_33/naut.cpp)
target_link_libraries(test_33 PRIVATE nautilus)
add_executable(test_36 test_36/naut.cpp)
target_link_libraries(test_36 PRIVATE nautilus)
add_executable(test_37 test_37/naut.cpp)
target_link_libraries(test_37 PRIVATE nautilus)
add_executable(test_42 test_42/naut.cpp)
target_link_libraries(test_42 PRIVATE nautilus)
add_executable(test_44 test_44/naut.cpp)
target_link_libraries(test_44 PRIVATE nautilus)
add_executable(test_48 test_48/naut.cpp)
target_link_libraries(test_48 PRIVATE nautilus)
add_executable(test_51 test_51/naut.cpp)
target_link_libraries(test_51 PRIVATE nautilus)
add_executable(test_53 test_53/naut.cpp)
target_link_libraries(test_53 PRIVATE nautilus)
add_executable(test_54 test_54/naut.cpp)
target_link_libraries(test_54 PRIVATE nautilus)
add_executable(test_55 test_55/naut.cpp)
target_link_libraries(test_55 PRIVATE nautilus)
add_executable(test_56 test_56/naut.cpp)
target_link_libraries(test_56 PRIVATE nautilus)
add_executable(test_59 test_59/naut.cpp)
target_link_libraries(test_59 PRIVATE nautilus)
add_executable(test_64 test_64/naut.cpp)
target_link_libraries(test_64 PRIVATE nautilus)
add_executable(test_65 test_65/naut.cpp)
target_link_libraries(test_65 PRIVATE nautilus)
add_executable(test_69 test_69/naut.cpp)
target_link_libraries(test_69 PRIVATE nautilus)
add_executable(test_71 test_71/naut.cpp)
target_link_libraries(test_71 PRIVATE nautilus)
add_executable(test_74 test_74/naut.cpp)
target_link_libraries(test_74 PRIVATE nautilus)
add_executable(test_76 test_76/naut.cpp)
target_link_libraries(test_76 PRIVATE nautilus)
add_executable(test_80 test_80/naut.cpp)
target_link_libraries(test_80 PRIVATE nautilus)
add_executable(test_82 test_82/naut.cpp)
target_link_libraries(test_82 PRIVATE nautilus)
add_executable(test_83 test_83/naut.cpp)
target_link_libraries(test_83 PRIVATE nautilus)
add_executable(test_84 test_84/naut.cpp)
target_link_libraries(test_84 PRIVATE nautilus)
add_executable(test_89 test_89/naut.cpp)
target_link_libraries(test_89 PRIVATE nautilus)
add_executable(test_90 test_90/naut.cpp)
target_link_libraries(test_90 PRIVATE nautilus)
add_executable(test_92 test_92/naut.cpp)
target_link_libraries(test_92 PRIVATE nautilus)
add_executable(test_93 test_93/naut.cpp)
target_link_libraries(test_93 PRIVATE nautilus)
add_executable(test_97 test_97/naut.cpp)
target_link_libraries(test_97 PRIVATE nautilus)
add_executable(test_105 test_105/naut.cpp)
target_link_libraries(test_105 PRIVATE nautilus)
add_executable(test_106 test_106/naut.cpp)
target_link_libraries(test_106 PRIVATE nautilus)
add_executable(test_112 test_112/naut.cpp)
target_link_libraries(test_112 PRIVATE nautilus)
add_executable(test_113 test_113/naut.cpp)
target_link_libraries(test_113 PRIVATE nautilus)
add_executable(test_118 test_118/naut.cpp)
target_link_libraries(test_118 PRIVATE nautilus)
add_executable(test_121 test_121/naut.cpp)
target_link_libraries(test_121 PRIVATE nautilus)
add_executable(test_123 test_123/naut.cpp)
target_link_libraries(test_123 PRIVATE nautilus)
add_executable(test_124 test_124/naut.cpp)
target_link_libraries(test_124 PRIVATE nautilus)
add_executable(test_125 test_125/naut.cpp)
target_link_libraries(test_125 PRIVATE nautilus)
add_executable(test_126 test_126/naut.cpp)
target_link_libraries(test_126 PRIVATE nautilus)
add_executable(test_127 test_127/naut.cpp)
target_link_libraries(test_127 PRIVATE nautilus)
add_executable(test_129 test_129/naut.cpp)
target_link_libraries(test_129 PRIVATE nautilus)
add_executable(test_130 test_130/naut.cpp)
target_link_libraries(test_130 PRIVATE nautilus)
add_executable(test_131 test_131/naut.cpp)
target_link_libraries(test_131 PRIVATE nautilus)
add_executable(test_132 test_132/naut.cpp)
target_link_libraries(test_132 PRIVATE nautilus)
add_executable(test_134 test_134/naut.cpp)
target_link_libraries(test_134 PRIVATE nautilus)
add_executable(test_135 test_135/naut.cpp)
target_link_libraries(test_135 PRIVATE nautilus)
add_executable(test_136 test_136/naut.cpp)
target_link_libraries(test_136 PRIVATE nautilus)
add_executable(test_139 test_139/naut.cpp)
target_link_libraries(test_139 PRIVATE nautilus)
add_executable(test_140 test_140/naut.cpp)
target_link_libraries(test_140 PRIVATE nautilus)
add_executable(test_141 test_141/naut.cpp)
target_link_libraries(test_141 PRIVATE nautilus)
add_executable(test_142 test_142/naut.cpp)
target_link_libraries(test_142 PRIVATE nautilus)
add_executable(test_144 test_144/naut.cpp)
target_link_libraries(test_144 PRIVATE nautilus)
add_executable(test_146 test_146/naut.cpp)
target_link_libraries(test_146 PRIVATE nautilus)
add_executable(test_148 test_148/naut.cpp)
target_link_libraries(test_148 PRIVATE nautilus)
add_executable(test_149 test_149/naut.cpp)
target_link_libraries(test_149 PRIVATE nautilus)
add_executable(test_151 test_151/naut.cpp)
target_link_libraries(test_151 PRIVATE nautilus)
add_executable(test_153 test_153/naut.cpp)
target_link_libraries(test_153 PRIVATE nautilus)
add_executable(test_154 test_154/naut.cpp)
target_link_libraries(test_154 PRIVATE nautilus)
add_executable(test_155 test_155/naut.cpp)
target_link_libraries(test_155 PRIVATE nautilus)
add_executable(test_157 test_157/naut.cpp)
target_link_libraries(test_157 PRIVATE nautilus)
add_executable(test_158 test_158/naut.cpp)
target_link_libraries(test_158 PRIVATE nautilus)
add_executable(test_160 test_160/naut.cpp)
target_link_libraries(test_160 PRIVATE nautilus)
add_executable(test_162 test_162/naut.cpp)
target_link_libraries(test_162 PRIVATE nautilus)
add_executable(test_163 test_163/naut.cpp)
target_link_libraries(test_163 PRIVATE nautilus)
add_executable(test_164 test_164/naut.cpp)
target_link_libraries(test_164 PRIVATE nautilus)
add_executable(test_165 test_165/naut.cpp)
target_link_libraries(test_165 PRIVATE nautilus)
add_executable(test_168 test_168/naut.cpp)
target_link_libraries(test_168 PRIVATE nautilus)
add_executable(test_170 test_170/naut.cpp)
target_link_libraries(test_170 PRIVATE nautilus)
add_executable(test_172 test_172/naut.cpp)
target_link_libraries(test_172 PRIVATE nautilus)
add_executable(test_173 test_173/naut.cpp)
target_link_libraries(test_173 PRIVATE nautilus)
add_executable(test_175 test_175/naut.cpp)
target_link_libraries(test_175 PRIVATE nautilus)
add_executable(test_176 test_176/naut.cpp)
target_link_libraries(test_176 PRIVATE nautilus)
add_executable(test_177 test_177/naut.cpp)
target_link_libraries(test_177 PRIVATE nautilus)
add_executable(test_181 test_181/naut.cpp)
target_link_libraries(test_181 PRIVATE nautilus)
add_executable(test_182 test_182/naut.cpp)
target_link_libraries(test_182 PRIVATE nautilus)
add_executable(test_184 test_184/naut.cpp)
target_link_libraries(test_184 PRIVATE nautilus)
add_executable(test_185 test_185/naut.cpp)
target_link_libraries(test_185 PRIVATE nautilus)
add_executable(test_186 test_186/naut.cpp)
target_link_libraries(test_186 PRIVATE nautilus)
add_executable(test_188 test_188/naut.cpp)
target_link_libraries(test_188 PRIVATE nautilus)
add_executable(test_192 test_192/naut.cpp)
target_link_libraries(test_192 PRIVATE nautilus)
add_executable(test_193 test_193/naut.cpp)
target_link_libraries(test_193 PRIVATE nautilus)
add_executable(test_197 test_197/naut.cpp)
target_link_libraries(test_197 PRIVATE nautilus)
add_executable(test_200 test_200/naut.cpp)
target_link_libraries(test_200 PRIVATE nautilus)
add_executable(test_201 test_201/naut.cpp)
target_link_libraries(test_201 PRIVATE nautilus)
add_executable(test_202 test_202/naut.cpp)
target_link_libraries(test_202 PRIVATE nautilus)
add_executable(test_204 test_204/naut.cpp)
target_link_libraries(test_204 PRIVATE nautilus)
add_executable(test_206 test_206/naut.cpp)
target_link_libraries(test_206 PRIVATE nautilus)
add_executable(test_207 test_207/naut.cpp)
target_link_libraries(test_207 PRIVATE nautilus)
add_executable(test_211 test_211/naut.cpp)
target_link_libraries(test_211 PRIVATE nautilus)
add_executable(test_213 test_213/naut.cpp)
target_link_libraries(test_213 PRIVATE nautilus)
add_executable(test_216 test_216/naut.cpp)
target_link_libraries(test_216 PRIVATE nautilus)
add_executable(test_218 test_218/naut.cpp)
target_link_libraries(test_218 PRIVATE nautilus)
add_executable(test_221 test_221/naut.cpp)
target_link_libraries(test_221 PRIVATE nautilus)
add_executable(test_229 test_229/naut.cpp)
target_link_libraries(test_229 PRIVATE nautilus)
add_executable(test_230 test_230/naut.cpp)
target_link_libraries(test_230 PRIVATE nautilus)
add_executable(test_231 test_231/naut.cpp)
target_link_libraries(test_231 PRIVATE nautilus)
add_executable(test_236 test_236/naut.cpp)
target_link_libraries(test_236 PRIVATE nautilus)
add_executable(test_237 test_237/naut.cpp)
target_link_libraries(test_237 PRIVATE nautilus)
add_executable(test_241 test_241/naut.cpp)
target_link_libraries(test_241 PRIVATE nautilus)
add_executable(test_242 test_242/naut.cpp)
target_link_libraries(test_242 PRIVATE nautilus)
add_executable(test_247 test_247/naut.cpp)
target_link_libraries(test_247 PRIVATE nautilus)
add_executable(test_252 test_252/naut.cpp)
target_link_libraries(test_252 PRIVATE nautilus)
add_executable(test_258 test_258/naut.cpp)
target_link_libraries(test_258 PRIVATE nautilus)
add_executable(test_260 test_260/naut.cpp)
target_link_libraries(test_260 PRIVATE nautilus)
add_executable(test_261 test_261/naut.cpp)
target_link_libraries(test_261 PRIVATE nautilus)
add_executable(test_264 test_264/naut.cpp)
target_link_libraries(test_264 PRIVATE nautilus)
add_executable(test_266 test_266/naut.cpp)
target_link_libraries(test_266 PRIVATE nautilus)
add_executable(test_267 test_267/naut.cpp)
target_link_libraries(test_267 PRIVATE nautilus)
add_executable(test_268 test_268/naut.cpp)
target_link_libraries(test_268 PRIVATE nautilus)
add_executable(test_269 test_269/naut.cpp)
target_link_libraries(test_269 PRIVATE nautilus)
add_executable(test_274 test_274/naut.cpp)
target_link_libraries(test_274 PRIVATE nautilus)
add_executable(test_277 test_277/naut.cpp)
target_link_libraries(test_277 PRIVATE nautilus)
add_executable(test_278 test_278/naut.cpp)
target_link_libraries(test_278 PRIVATE nautilus)
add_executable(test_280 test_280/naut.cpp)
target_link_libraries(test_280 PRIVATE nautilus)
add_executable(test_281 test_281/naut.cpp)
target_link_libraries(test_281 PRIVATE nautilus)
add_executable(test_283 test_283/naut.cpp)
target_link_libraries(test_283 PRIVATE nautilus)
add_executable(test_285 test_285/naut.cpp)
target_link_libraries(test_285 PRIVATE nautilus)
add_executable(test_286 test_286/naut.cpp)
target_link_libraries(test_286 PRIVATE nautilus)
add_executable(test_288 test_288/naut.cpp)
target_link_libraries(test_288 PRIVATE nautilus)
add_executable(test_289 test_289/naut.cpp)
target_link_libraries(test_289 PRIVATE nautilus)
add_executable(test_291 test_291/naut.cpp)
target_link_libraries(test_291 PRIVATE nautilus)
add_executable(test_293 test_293/naut.cpp)
target_link_libraries(test_293 PRIVATE nautilus)
add_executable(test_296 test_296/naut.cpp)
target_link_libraries(test_296 PRIVATE nautilus)
add_executable(test_298 test_298/naut.cpp)
target_link_libraries(test_298 PRIVATE nautilus)
add_executable(test_299 test_299/naut.cpp)
target_link_libraries(test_299 PRIVATE nautilus)
add_executable(test_300 test_300/naut.cpp)
target_link_libraries(test_300 PRIVATE nautilus)
add_executable(test_305 test_305/naut.cpp)
target_link_libraries(test_305 PRIVATE nautilus)
add_executable(test_306 test_306/naut.cpp)
target_link_libraries(test_306 PRIVATE nautilus)
add_executable(test_307 test_307/naut.cpp)
target_link_libraries(test_307 PRIVATE nautilus)
add_executable(test_311 test_311/naut.cpp)
target_link_libraries(test_311 PRIVATE nautilus)
add_executable(test_313 test_313/naut.cpp)
target_link_libraries(test_313 PRIVATE nautilus)
add_executable(test_318 test_318/naut.cpp)
target_link_libraries(test_318 PRIVATE nautilus)
add_executable(test_320 test_320/naut.cpp)
target_link_libraries(test_320 PRIVATE nautilus)
add_executable(test_321 test_321/naut.cpp)
target_link_libraries(test_321 PRIVATE nautilus)
add_executable(test_325 test_325/naut.cpp)
target_link_libraries(test_325 PRIVATE nautilus)
add_executable(test_328 test_328/naut.cpp)
target_link_libraries(test_328 PRIVATE nautilus)
add_executable(test_330 test_330/naut.cpp)
target_link_libraries(test_330 PRIVATE nautilus)
add_executable(test_337 test_337/naut.cpp)
target_link_libraries(test_337 PRIVATE nautilus)
add_executable(test_338 test_338/naut.cpp)
target_link_libraries(test_338 PRIVATE nautilus)
add_executable(test_340 test_340/naut.cpp)
target_link_libraries(test_340 PRIVATE nautilus)
add_executable(test_342 test_342/naut.cpp)
target_link_libraries(test_342 PRIVATE nautilus)
add_executable(test_343 test_343/naut.cpp)
target_link_libraries(test_343 PRIVATE nautilus)
add_executable(test_345 test_345/naut.cpp)
target_link_libraries(test_345 PRIVATE nautilus)
add_executable(test_346 test_346/naut.cpp)
target_link_libraries(test_346 PRIVATE nautilus)
add_executable(test_347 test_347/naut.cpp)
target_link_libraries(test_347 PRIVATE nautilus)
add_executable(test_348 test_348/naut.cpp)
target_link_libraries(test_348 PRIVATE nautilus)
add_executable(test_351 test_351/naut.cpp)
target_link_libraries(test_351 PRIVATE nautilus)
add_executable(test_352 test_352/naut.cpp)
target_link_libraries(test_352 PRIVATE nautilus)
add_executable(test_354 test_354/naut.cpp)
target_link_libraries(test_354 PRIVATE nautilus)
add_executable(test_355 test_355/naut.cpp)
target_link_libraries(test_355 PRIVATE nautilus)
add_executable(test_356 test_356/naut.cpp)
target_link_libraries(test_356 PRIVATE nautilus)
add_executable(test_359 test_359/naut.cpp)
target_link_libraries(test_359 PRIVATE nautilus)
add_executable(test_360 test_360/naut.cpp)
target_link_libraries(test_360 PRIVATE nautilus)
add_executable(test_361 test_361/naut.cpp)
target_link_libraries(test_361 PRIVATE nautilus)
add_executable(test_364 test_364/naut.cpp)
target_link_libraries(test_364 PRIVATE nautilus)
add_executable(test_365 test_365/naut.cpp)
target_link_libraries(test_365 PRIVATE nautilus)
add_executable(test_367 test_367/naut.cpp)
target_link_libraries(test_367 PRIVATE nautilus)
add_executable(test_369 test_369/naut.cpp)
target_link_libraries(test_369 PRIVATE nautilus)
add_executable(test_370 test_370/naut.cpp)
target_link_libraries(test_370 PRIVATE nautilus)
add_executable(test_371 test_371/naut.cpp)
target_link_libraries(test_371 PRIVATE nautilus)
add_executable(test_373 test_373/naut.cpp)
target_link_libraries(test_373 PRIVATE nautilus)
add_executable(test_374 test_374/naut.cpp)
target_link_libraries(test_374 PRIVATE nautilus)
add_executable(test_377 test_377/naut.cpp)
target_link_libraries(test_377 PRIVATE nautilus)
add_executable(test_379 test_379/naut.cpp)
target_link_libraries(test_379 PRIVATE nautilus)
add_executable(test_380 test_380/naut.cpp)
target_link_libraries(test_380 PRIVATE nautilus)
add_executable(test_381 test_381/naut.cpp)
target_link_libraries(test_381 PRIVATE nautilus)
add_executable(test_385 test_385/naut.cpp)
target_link_libraries(test_385 PRIVATE nautilus)
add_executable(test_389 test_389/naut.cpp)
target_link_libraries(test_389 PRIVATE nautilus)
add_executable(test_391 test_391/naut.cpp)
target_link_libraries(test_391 PRIVATE nautilus)
add_executable(test_392 test_392/naut.cpp)
target_link_libraries(test_392 PRIVATE nautilus)
add_executable(test_394 test_394/naut.cpp)
target_link_libraries(test_394 PRIVATE nautilus)
add_executable(test_395 test_395/naut.cpp)
target_link_libraries(test_395 PRIVATE nautilus)
add_executable(test_397 test_397/naut.cpp)
target_link_libraries(test_397 PRIVATE nautilus)
add_executable(test_398 test_398/naut.cpp)
target_link_libraries(test_398 PRIVATE nautilus)
add_executable(test_400 test_400/naut.cpp)
target_link_libraries(test_400 PRIVATE nautilus)
add_executable(test_401 test_401/naut.cpp)
target_link_libraries(test_401 PRIVATE nautilus)
add_executable(test_402 test_402/naut.cpp)
target_link_libraries(test_402 PRIVATE nautilus)
add_executable(test_403 test_403/naut.cpp)
target_link_libraries(test_403 PRIVATE nautilus)
add_executable(test_406 test_406/naut.cpp)
target_link_libraries(test_406 PRIVATE nautilus)
add_executable(test_411 test_411/naut.cpp)
target_link_libraries(test_411 PRIVATE nautilus)
add_executable(test_413 test_413/naut.cpp)
target_link_libraries(test_413 PRIVATE nautilus)
add_executable(test_414 test_414/naut.cpp)
target_link_libraries(test_414 PRIVATE nautilus)
add_executable(test_419 test_419/naut.cpp)
target_link_libraries(test_419 PRIVATE nautilus)
add_executable(test_423 test_423/naut.cpp)
target_link_libraries(test_423 PRIVATE nautilus)
add_executable(test_425 test_425/naut.cpp)
target_link_libraries(test_425 PRIVATE nautilus)
add_executable(test_427 test_427/naut.cpp)
target_link_libraries(test_427 PRIVATE nautilus)
add_executable(test_428 test_428/naut.cpp)
target_link_libraries(test_428 PRIVATE nautilus)
add_executable(test_429 test_429/naut.cpp)
target_link_libraries(test_429 PRIVATE nautilus)
add_executable(test_433 test_433/naut.cpp)
target_link_libraries(test_433 PRIVATE nautilus)
add_executable(test_434 test_434/naut.cpp)
target_link_libraries(test_434 PRIVATE nautilus)
add_executable(test_435 test_435/naut.cpp)
target_link_libraries(test_435 PRIVATE nautilus)
add_executable(test_436 test_436/naut.cpp)
target_link_libraries(test_436 PRIVATE nautilus)
add_executable(test_438 test_438/naut.cpp)
target_link_libraries(test_438 PRIVATE nautilus)
add_executable(test_440 test_440/naut.cpp)
target_link_libraries(test_440 PRIVATE nautilus)
add_executable(test_442 test_442/naut.cpp)
target_link_libraries(test_442 PRIVATE nautilus)
add_executable(test_444 test_444/naut.cpp)
target_link_libraries(test_444 PRIVATE nautilus)
add_executable(test_445 test_445/naut.cpp)
target_link_libraries(test_445 PRIVATE nautilus)
add_executable(test_446 test_446/naut.cpp)
target_link_libraries(test_446 PRIVATE nautilus)
add_executable(test_449 test_449/naut.cpp)
target_link_libraries(test_449 PRIVATE nautilus)
add_executable(test_450 test_450/naut.cpp)
target_link_libraries(test_450 PRIVATE nautilus)
add_executable(test_451 test_451/naut.cpp)
target_link_libraries(test_451 PRIVATE nautilus)
add_executable(test_454 test_454/naut.cpp)
target_link_libraries(test_454 PRIVATE nautilus)
add_executable(test_457 test_457/naut.cpp)
target_link_libraries(test_457 PRIVATE nautilus)
add_executable(test_458 test_458/naut.cpp)
target_link_libraries(test_458 PRIVATE nautilus)
add_executable(test_459 test_459/naut.cpp)
target_link_libraries(test_459 PRIVATE nautilus)
add_executable(test_460 test_460/naut.cpp)
target_link_libraries(test_460 PRIVATE nautilus)
add_executable(test_463 test_463/naut.cpp)
target_link_libraries(test_463 PRIVATE nautilus)
add_executable(test_465 test_465/naut.cpp)
target_link_libraries(test_465 PRIVATE nautilus)
add_executable(test_468 test_468/naut.cpp)
target_link_libraries(test_468 PRIVATE nautilus)
add_executable(test_472 test_472/naut.cpp)
target_link_libraries(test_472 PRIVATE nautilus)
add_executable(test_473 test_473/naut.cpp)
target_link_libraries(test_473 PRIVATE nautilus)
add_executable(test_477 test_477/naut.cpp)
target_link_libraries(test_477 PRIVATE nautilus)
add_executable(test_480 test_480/naut.cpp)
target_link_libraries(test_480 PRIVATE nautilus)
add_executable(test_481 test_481/naut.cpp)
target_link_libraries(test_481 PRIVATE nautilus)
add_executable(test_483 test_483/naut.cpp)
target_link_libraries(test_483 PRIVATE nautilus)
add_executable(test_484 test_484/naut.cpp)
target_link_libraries(test_484 PRIVATE nautilus)
add_executable(test_485 test_485/naut.cpp)
target_link_libraries(test_485 PRIVATE nautilus)
add_executable(test_486 test_486/naut.cpp)
target_link_libraries(test_486 PRIVATE nautilus)
add_executable(test_488 test_488/naut.cpp)
target_link_libraries(test_488 PRIVATE nautilus)
add_executable(test_491 test_491/naut.cpp)
target_link_libraries(test_491 PRIVATE nautilus)
add_executable(test_493 test_493/naut.cpp)
target_link_libraries(test_493 PRIVATE nautilus)
add_executable(test_495 test_495/naut.cpp)
target_link_libraries(test_495 PRIVATE nautilus)
add_executable(test_499 test_499/naut.cpp)
target_link_libraries(test_499 PRIVATE nautilus)
add_executable(test_500 test_500/naut.cpp)
target_link_libraries(test_500 PRIVATE nautilus)
add_executable(test_502 test_502/naut.cpp)
target_link_libraries(test_502 PRIVATE nautilus)
add_executable(test_503 test_503/naut.cpp)
target_link_libraries(test_503 PRIVATE nautilus)
add_executable(test_506 test_506/naut.cpp)
target_link_libraries(test_506 PRIVATE nautilus)
add_executable(test_509 test_509/naut.cpp)
target_link_libraries(test_509 PRIVATE nautilus)
add_executable(test_510 test_510/naut.cpp)
target_link_libraries(test_510 PRIVATE nautilus)
add_executable(test_524 test_524/naut.cpp)
target_link_libraries(test_524 PRIVATE nautilus)
add_executable(test_526 test_526/naut.cpp)
target_link_libraries(test_526 PRIVATE nautilus)
add_executable(test_527 test_527/naut.cpp)
target_link_libraries(test_527 PRIVATE nautilus)
add_executable(test_528 test_528/naut.cpp)
target_link_libraries(test_528 PRIVATE nautilus)
add_executable(test_529 test_529/naut.cpp)
target_link_libraries(test_529 PRIVATE nautilus)
add_executable(test_531 test_531/naut.cpp)
target_link_libraries(test_531 PRIVATE nautilus)
add_executable(test_533 test_533/naut.cpp)
target_link_libraries(test_533 PRIVATE nautilus)
add_executable(test_541 test_541/naut.cpp)
target_link_libraries(test_541 PRIVATE nautilus)
add_executable(test_542 test_542/naut.cpp)
target_link_libraries(test_542 PRIVATE nautilus)
add_executable(test_545 test_545/naut.cpp)
target_link_libraries(test_545 PRIVATE nautilus)
add_executable(test_546 test_546/naut.cpp)
target_link_libraries(test_546 PRIVATE nautilus)
add_executable(test_547 test_547/naut.cpp)
target_link_libraries(test_547 PRIVATE nautilus)
add_executable(test_550 test_550/naut.cpp)
target_link_libraries(test_550 PRIVATE nautilus)
add_executable(test_552 test_552/naut.cpp)
target_link_libraries(test_552 PRIVATE nautilus)
add_executable(test_555 test_555/naut.cpp)
target_link_libraries(test_555 PRIVATE nautilus)
add_executable(test_556 test_556/naut.cpp)
target_link_libraries(test_556 PRIVATE nautilus)
add_executable(test_557 test_557/naut.cpp)
target_link_libraries(test_557 PRIVATE nautilus)
add_executable(test_559 test_559/naut.cpp)
target_link_libraries(test_559 PRIVATE nautilus)
add_executable(test_560 test_560/naut.cpp)
target_link_libraries(test_560 PRIVATE nautilus)
add_executable(test_561 test_561/naut.cpp)
target_link_libraries(test_561 PRIVATE nautilus)
add_executable(test_562 test_562/naut.cpp)
target_link_libraries(test_562 PRIVATE nautilus)
add_executable(test_567 test_567/naut.cpp)
target_link_libraries(test_567 PRIVATE nautilus)
add_executable(test_573 test_573/naut.cpp)
target_link_libraries(test_573 PRIVATE nautilus)
add_executable(test_575 test_575/naut.cpp)
target_link_libraries(test_575 PRIVATE nautilus)
add_executable(test_577 test_577/naut.cpp)
target_link_libraries(test_577 PRIVATE nautilus)
add_executable(test_582 test_582/naut.cpp)
target_link_libraries(test_582 PRIVATE nautilus)
add_executable(test_584 test_584/naut.cpp)
target_link_libraries(test_584 PRIVATE nautilus)
add_executable(test_588 test_588/naut.cpp)
target_link_libraries(test_588 PRIVATE nautilus)
add_executable(test_592 test_592/naut.cpp)
target_link_libraries(test_592 PRIVATE nautilus)
add_executable(test_593 test_593/naut.cpp)
target_link_libraries(test_593 PRIVATE nautilus)
add_executable(test_595 test_595/naut.cpp)
target_link_libraries(test_595 PRIVATE nautilus)
add_executable(test_596 test_596/naut.cpp)
target_link_libraries(test_596 PRIVATE nautilus)
add_executable(test_599 test_599/naut.cpp)
target_link_libraries(test_599 PRIVATE nautilus)
add_executable(test_606 test_606/naut.cpp)
target_link_libraries(test_606 PRIVATE nautilus)
add_executable(test_608 test_608/naut.cpp)
target_link_libraries(test_608 PRIVATE nautilus)
add_executable(test_609 test_609/naut.cpp)
target_link_libraries(test_609 PRIVATE nautilus)
add_executable(test_610 test_610/naut.cpp)
target_link_libraries(test_610 PRIVATE nautilus)
add_executable(test_611 test_611/naut.cpp)
target_link_libraries(test_611 PRIVATE nautilus)
add_executable(test_614 test_614/naut.cpp)
target_link_libraries(test_614 PRIVATE nautilus)
add_executable(test_616 test_616/naut.cpp)
target_link_libraries(test_616 PRIVATE nautilus)
add_executable(test_618 test_618/naut.cpp)
target_link_libraries(test_618 PRIVATE nautilus)
add_executable(test_620 test_620/naut.cpp)
target_link_libraries(test_620 PRIVATE nautilus)
add_executable(test_623 test_623/naut.cpp)
target_link_libraries(test_623 PRIVATE nautilus)
add_executable(test_625 test_625/naut.cpp)
target_link_libraries(test_625 PRIVATE nautilus)
add_executable(test_626 test_626/naut.cpp)
target_link_libraries(test_626 PRIVATE nautilus)
add_executable(test_627 test_627/naut.cpp)
target_link_libraries(test_627 PRIVATE nautilus)
add_executable(test_630 test_630/naut.cpp)
target_link_libraries(test_630 PRIVATE nautilus)
add_executable(test_632 test_632/naut.cpp)
target_link_libraries(test_632 PRIVATE nautilus)
add_executable(test_633 test_633/naut.cpp)
target_link_libraries(test_633 PRIVATE nautilus)
add_executable(test_638 test_638/naut.cpp)
target_link_libraries(test_638 PRIVATE nautilus)
add_executable(test_639 test_639/naut.cpp)
target_link_libraries(test_639 PRIVATE nautilus)
add_executable(test_640 test_640/naut.cpp)
target_link_libraries(test_640 PRIVATE nautilus)
add_executable(test_641 test_641/naut.cpp)
target_link_libraries(test_641 PRIVATE nautilus)
add_executable(test_642 test_642/naut.cpp)
target_link_libraries(test_642 PRIVATE nautilus)
add_executable(test_643 test_643/naut.cpp)
target_link_libraries(test_643 PRIVATE nautilus)
add_executable(test_644 test_644/naut.cpp)
target_link_libraries(test_644 PRIVATE nautilus)
add_executable(test_649 test_649/naut.cpp)
target_link_libraries(test_649 PRIVATE nautilus)
add_executable(test_650 test_650/naut.cpp)
target_link_libraries(test_650 PRIVATE nautilus)
add_executable(test_652 test_652/naut.cpp)
target_link_libraries(test_652 PRIVATE nautilus)
add_executable(test_653 test_653/naut.cpp)
target_link_libraries(test_653 PRIVATE nautilus)
add_executable(test_655 test_655/naut.cpp)
target_link_libraries(test_655 PRIVATE nautilus)
add_executable(test_656 test_656/naut.cpp)
target_link_libraries(test_656 PRIVATE nautilus)
add_executable(test_659 test_659/naut.cpp)
target_link_libraries(test_659 PRIVATE nautilus)
add_executable(test_662 test_662/naut.cpp)
target_link_libraries(test_662 PRIVATE nautilus)
add_executable(test_664 test_664/naut.cpp)
target_link_libraries(test_664 PRIVATE nautilus)
add_executable(test_666 test_666/naut.cpp)
target_link_libraries(test_666 PRIVATE nautilus)
add_executable(test_667 test_667/naut.cpp)
target_link_libraries(test_667 PRIVATE nautilus)
add_executable(test_670 test_670/naut.cpp)
target_link_libraries(test_670 PRIVATE nautilus)
add_executable(test_671 test_671/naut.cpp)
target_link_libraries(test_671 PRIVATE nautilus)
add_executable(test_673 test_673/naut.cpp)
target_link_libraries(test_673 PRIVATE nautilus)
add_executable(test_674 test_674/naut.cpp)
target_link_libraries(test_674 PRIVATE nautilus)
add_executable(test_676 test_676/naut.cpp)
target_link_libraries(test_676 PRIVATE nautilus)
add_executable(test_677 test_677/naut.cpp)
target_link_libraries(test_677 PRIVATE nautilus)
add_executable(test_678 test_678/naut.cpp)
target_link_libraries(test_678 PRIVATE nautilus)
add_executable(test_679 test_679/naut.cpp)
target_link_libraries(test_679 PRIVATE nautilus)
add_executable(test_680 test_680/naut.cpp)
target_link_libraries(test_680 PRIVATE nautilus)
add_executable(test_682 test_682/naut.cpp)
target_link_libraries(test_682 PRIVATE nautilus)
add_executable(test_684 test_684/naut.cpp)
target_link_libraries(test_684 PRIVATE nautilus)
add_executable(test_685 test_685/naut.cpp)
target_link_libraries(test_685 PRIVATE nautilus)
add_executable(test_686 test_686/naut.cpp)
target_link_libraries(test_686 PRIVATE nautilus)
add_executable(test_687 test_687/naut.cpp)
target_link_libraries(test_687 PRIVATE nautilus)
add_executable(test_690 test_690/naut.cpp)
target_link_libraries(test_690 PRIVATE nautilus)
add_executable(test_694 test_694/naut.cpp)
target_link_libraries(test_694 PRIVATE nautilus)
add_executable(test_695 test_695/naut.cpp)
target_link_libraries(test_695 PRIVATE nautilus)
add_executable(test_696 test_696/naut.cpp)
target_link_libraries(test_696 PRIVATE nautilus)
add_executable(test_697 test_697/naut.cpp)
target_link_libraries(test_697 PRIVATE nautilus)
add_executable(test_698 test_698/naut.cpp)
target_link_libraries(test_698 PRIVATE nautilus)
add_executable(test_702 test_702/naut.cpp)
target_link_libraries(test_702 PRIVATE nautilus)
add_executable(test_707 test_707/naut.cpp)
target_link_libraries(test_707 PRIVATE nautilus)
add_executable(test_712 test_712/naut.cpp)
target_link_libraries(test_712 PRIVATE nautilus)
add_executable(test_713 test_713/naut.cpp)
target_link_libraries(test_713 PRIVATE nautilus)
add_executable(test_714 test_714/naut.cpp)
target_link_libraries(test_714 PRIVATE nautilus)
add_executable(test_715 test_715/naut.cpp)
target_link_libraries(test_715 PRIVATE nautilus)
add_executable(test_716 test_716/naut.cpp)
target_link_libraries(test_716 PRIVATE nautilus)
add_executable(test_719 test_719/naut.cpp)
target_link_libraries(test_719 PRIVATE nautilus)
add_executable(test_721 test_721/naut.cpp)
target_link_libraries(test_721 PRIVATE nautilus)
add_executable(test_723 test_723/naut.cpp)
target_link_libraries(test_723 PRIVATE nautilus)
add_executable(test_729 test_729/naut.cpp)
target_link_libraries(test_729 PRIVATE nautilus)
add_executable(test_732 test_732/naut.cpp)
target_link_libraries(test_732 PRIVATE nautilus)
add_executable(test_733 test_733/naut.cpp)
target_link_libraries(test_733 PRIVATE nautilus)
add_executable(test_737 test_737/naut.cpp)
target_link_libraries(test_737 PRIVATE nautilus)
add_executable(test_740 test_740/naut.cpp)
target_link_libraries(test_740 PRIVATE nautilus)
add_executable(test_748 test_748/naut.cpp)
target_link_libraries(test_748 PRIVATE nautilus)
add_executable(test_750 test_750/naut.cpp)
target_link_libraries(test_750 PRIVATE nautilus)
add_executable(test_754 test_754/naut.cpp)
target_link_libraries(test_754 PRIVATE nautilus)
add_executable(test_756 test_756/naut.cpp)
target_link_libraries(test_756 PRIVATE nautilus)
add_executable(test_757 test_757/naut.cpp)
target_link_libraries(test_757 PRIVATE nautilus)
add_executable(test_759 test_759/naut.cpp)
target_link_libraries(test_759 PRIVATE nautilus)
add_executable(test_761 test_761/naut.cpp)
target_link_libraries(test_761 PRIVATE nautilus)
add_executable(test_762 test_762/naut.cpp)
target_link_libraries(test_762 PRIVATE nautilus)
add_executable(test_764 test_764/naut.cpp)
target_link_libraries(test_764 PRIVATE nautilus)
add_executable(test_767 test_767/naut.cpp)
target_link_libraries(test_767 PRIVATE nautilus)
add_executable(test_769 test_769/naut.cpp)
target_link_libraries(test_769 PRIVATE nautilus)
add_executable(test_771 test_771/naut.cpp)
target_link_libraries(test_771 PRIVATE nautilus)
add_executable(test_772 test_772/naut.cpp)
target_link_libraries(test_772 PRIVATE nautilus)
add_executable(test_774 test_774/naut.cpp)
target_link_libraries(test_774 PRIVATE nautilus)
add_executable(test_777 test_777/naut.cpp)
target_link_libraries(test_777 PRIVATE nautilus)
add_executable(test_778 test_778/naut.cpp)
target_link_libraries(test_778 PRIVATE nautilus)
add_executable(test_784 test_784/naut.cpp)
target_link_libraries(test_784 PRIVATE nautilus)
add_executable(test_788 test_788/naut.cpp)
target_link_libraries(test_788 PRIVATE nautilus)
add_executable(test_789 test_789/naut.cpp)
target_link_libraries(test_789 PRIVATE nautilus)
add_executable(test_791 test_791/naut.cpp)
target_link_libraries(test_791 PRIVATE nautilus)
add_executable(test_793 test_793/naut.cpp)
target_link_libraries(test_793 PRIVATE nautilus)
add_executable(test_794 test_794/naut.cpp)
target_link_libraries(test_794 PRIVATE nautilus)
add_executable(test_795 test_795/naut.cpp)
target_link_libraries(test_795 PRIVATE nautilus)
add_executable(test_796 test_796/naut.cpp)
target_link_libraries(test_796 PRIVATE nautilus)
add_executable(test_799 test_799/naut.cpp)
target_link_libraries(test_799 PRIVATE nautilus)
add_executable(test_808 test_808/naut.cpp)
target_link_libraries(test_808 PRIVATE nautilus)
add_executable(test_809 test_809/naut.cpp)
target_link_libraries(test_809 PRIVATE nautilus)
add_executable(test_810 test_810/naut.cpp)
target_link_libraries(test_810 PRIVATE nautilus)
add_executable(test_812 test_812/naut.cpp)
target_link_libraries(test_812 PRIVATE nautilus)
add_executable(test_813 test_813/naut.cpp)
target_link_libraries(test_813 PRIVATE nautilus)
add_executable(test_814 test_814/naut.cpp)
target_link_libraries(test_814 PRIVATE nautilus)
add_executable(test_815 test_815/naut.cpp)
target_link_libraries(test_815 PRIVATE nautilus)
add_executable(test_816 test_816/naut.cpp)
target_link_libraries(test_816 PRIVATE nautilus)
add_executable(test_817 test_817/naut.cpp)
target_link_libraries(test_817 PRIVATE nautilus)
add_executable(test_819 test_819/naut.cpp)
target_link_libraries(test_819 PRIVATE nautilus)
add_executable(test_820 test_820/naut.cpp)
target_link_libraries(test_820 PRIVATE nautilus)
add_executable(test_824 test_824/naut.cpp)
target_link_libraries(test_824 PRIVATE nautilus)
add_executable(test_825 test_825/naut.cpp)
target_link_libraries(test_825 PRIVATE nautilus)
add_executable(test_827 test_827/naut.cpp)
target_link_libraries(test_827 PRIVATE nautilus)
add_executable(test_829 test_829/naut.cpp)
target_link_libraries(test_829 PRIVATE nautilus)
add_executable(test_830 test_830/naut.cpp)
target_link_libraries(test_830 PRIVATE nautilus)
add_executable(test_832 test_832/naut.cpp)
target_link_libraries(test_832 PRIVATE nautilus)
add_executable(test_833 test_833/naut.cpp)
target_link_libraries(test_833 PRIVATE nautilus)
add_executable(test_834 test_834/naut.cpp)
target_link_libraries(test_834 PRIVATE nautilus)
add_executable(test_838 test_838/naut.cpp)
target_link_libraries(test_838 PRIVATE nautilus)
add_executable(test_839 test_839/naut.cpp)
target_link_libraries(test_839 PRIVATE nautilus)
add_executable(test_840 test_840/naut.cpp)
target_link_libraries(test_840 PRIVATE nautilus)
add_executable(test_841 test_841/naut.cpp)
target_link_libraries(test_841 PRIVATE nautilus)
add_executable(test_846 test_846/naut.cpp)
target_link_libraries(test_846 PRIVATE nautilus)
add_executable(test_856 test_856/naut.cpp)
target_link_libraries(test_856 PRIVATE nautilus)
add_executable(test_858 test_858/naut.cpp)
target_link_libraries(test_858 PRIVATE nautilus)
add_executable(test_860 test_860/naut.cpp)
target_link_libraries(test_860 PRIVATE nautilus)
add_executable(test_861 test_861/naut.cpp)
target_link_libraries(test_861 PRIVATE nautilus)
add_executable(test_868 test_868/naut.cpp)
target_link_libraries(test_868 PRIVATE nautilus)
add_executable(test_871 test_871/naut.cpp)
target_link_libraries(test_871 PRIVATE nautilus)
add_executable(test_872 test_872/naut.cpp)
target_link_libraries(test_872 PRIVATE nautilus)
add_executable(test_873 test_873/naut.cpp)
target_link_libraries(test_873 PRIVATE nautilus)
add_executable(test_878 test_878/naut.cpp)
target_link_libraries(test_878 PRIVATE nautilus)
add_executable(test_879 test_879/naut.cpp)
target_link_libraries(test_879 PRIVATE nautilus)
add_executable(test_881 test_881/naut.cpp)
target_link_libraries(test_881 PRIVATE nautilus)
add_executable(test_883 test_883/naut.cpp)
target_link_libraries(test_883 PRIVATE nautilus)
add_executable(test_886 test_886/naut.cpp)
target_link_libraries(test_886 PRIVATE nautilus)
add_executable(test_887 test_887/naut.cpp)
target_link_libraries(test_887 PRIVATE nautilus)
add_executable(test_888 test_888/naut.cpp)
target_link_libraries(test_888 PRIVATE nautilus)
add_executable(test_891 test_891/naut.cpp)
target_link_libraries(test_891 PRIVATE nautilus)
add_executable(test_896 test_896/naut.cpp)
target_link_libraries(test_896 PRIVATE nautilus)
add_executable(test_897 test_897/naut.cpp)
target_link_libraries(test_897 PRIVATE nautilus)
add_executable(test_899 test_899/naut.cpp)
target_link_libraries(test_899 PRIVATE nautilus)
add_executable(test_900 test_900/naut.cpp)
target_link_libraries(test_900 PRIVATE nautilus)
add_executable(test_903 test_903/naut.cpp)
target_link_libraries(test_903 PRIVATE nautilus)
add_executable(test_906 test_906/naut.cpp)
target_link_libraries(test_906 PRIVATE nautilus)
add_executable(test_908 test_908/naut.cpp)
target_link_libraries(test_908 PRIVATE nautilus)
add_executable(test_910 test_910/naut.cpp)
target_link_libraries(test_910 PRIVATE nautilus)
add_executable(test_912 test_912/naut.cpp)
target_link_libraries(test_912 PRIVATE nautilus)
add_executable(test_913 test_913/naut.cpp)
target_link_libraries(test_913 PRIVATE nautilus)
add_executable(test_914 test_914/naut.cpp)
target_link_libraries(test_914 PRIVATE nautilus)
add_executable(test_915 test_915/naut.cpp)
target_link_libraries(test_915 PRIVATE nautilus)
add_executable(test_922 test_922/naut.cpp)
target_link_libraries(test_922 PRIVATE nautilus)
add_executable(test_923 test_923/naut.cpp)
target_link_libraries(test_923 PRIVATE nautilus)
add_executable(test_927 test_927/naut.cpp)
target_link_libraries(test_927 PRIVATE nautilus)
add_executable(test_929 test_929/naut.cpp)
target_link_libraries(test_929 PRIVATE nautilus)
add_executable(test_936 test_936/naut.cpp)
target_link_libraries(test_936 PRIVATE nautilus)
add_executable(test_942 test_942/naut.cpp)
target_link_libraries(test_942 PRIVATE nautilus)
add_executable(test_948 test_948/naut.cpp)
target_link_libraries(test_948 PRIVATE nautilus)
add_executable(test_951 test_951/naut.cpp)
target_link_libraries(test_951 PRIVATE nautilus)
add_executable(test_954 test_954/naut.cpp)
target_link_libraries(test_954 PRIVATE nautilus)
add_executable(test_956 test_956/naut.cpp)
target_link_libraries(test_956 PRIVATE nautilus)
add_executable(test_957 test_957/naut.cpp)
target_link_libraries(test_957 PRIVATE nautilus)
add_executable(test_958 test_958/naut.cpp)
target_link_libraries(test_958 PRIVATE nautilus)
add_executable(test_962 test_962/naut.cpp)
target_link_libraries(test_962 PRIVATE nautilus)
add_executable(test_963 test_963/naut.cpp)
target_link_libraries(test_963 PRIVATE nautilus)
add_executable(test_964 test_964/naut.cpp)
target_link_libraries(test_964 PRIVATE nautilus)
add_executable(test_966 test_966/naut.cpp)
target_link_libraries(test_966 PRIVATE nautilus)
add_executable(test_969 test_969/naut.cpp)
target_link_libraries(test_969 PRIVATE nautilus)
add_executable(test_970 test_970/naut.cpp)
target_link_libraries(test_970 PRIVATE nautilus)
add_executable(test_972 test_972/naut.cpp)
target_link_libraries(test_972 PRIVATE nautilus)
add_executable(test_975 test_975/naut.cpp)
target_link_libraries(test_975 PRIVATE nautilus)
add_executable(test_978 test_978/naut.cpp)
target_link_libraries(test_978 PRIVATE nautilus)
add_executable(test_983 test_983/naut.cpp)
target_link_libraries(test_983 PRIVATE nautilus)
add_executable(test_984 test_984/naut.cpp)
target_link_libraries(test_984 PRIVATE nautilus)
add_executable(test_985 test_985/naut.cpp)
target_link_libraries(test_985 PRIVATE nautilus)
add_executable(test_986 test_986/naut.cpp)
target_link_libraries(test_986 PRIVATE nautilus)
add_executable(test_987 test_987/naut.cpp)
target_link_libraries(test_987 PRIVATE nautilus)
add_executable(test_988 test_988/naut.cpp)
target_link_libraries(test_988 PRIVATE nautilus)
add_executable(test_992 test_992/naut.cpp)
target_link_libraries(test_992 PRIVATE nautilus)
add_executable(test_993 test_993/naut.cpp)
target_link_libraries(test_993 PRIVATE nautilus)
add_executable(test_995 test_995/naut.cpp)
target_link_libraries(test_995 PRIVATE nautilus)
add_executable(test_997 test_997/naut.cpp)
target_link_libraries(test_997 PRIVATE nautilus)
add_executable(test_998 test_998/naut.cpp)
target_link_libraries(test_998 PRIVATE nautilus)
add_executable(test_999 test_999/naut.cpp)
target_link_libraries(test_999 PRIVATE nautilus)
add_executable(test_1000 test_1000/naut.cpp)
target_link_libraries(test_1000 PRIVATE nautilus)
